static/css/hero.css
.hero {
  position: relative;
  width: 100%;
  height: 100dvh;
  background-image: url("/static/images/bg1.jpg");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  overflow: hidden;
  padding: 0;
  margin: 0;
}

.hero img {
  width: 100%;
}

.hero::before {
  content: "";
  position: absolute;
  inset: 0;
  background: rgba(0, 0, 0, 0.50);
  z-index: 1;
}

.hero-light::before {
  content: "";
  position: absolute;
  inset: 0;
  background: rgba(0, 0, 0, 0.20);
  z-index: 1;
}

.hero-content {
  position: absolute;
  top: 80%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 2;
  color: white;
  text-align: center;
  font-size: 34px;
}

.page-bg {
  position: relative;
  min-height: 100vh;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;

  display: flex;
  justify-content: center;
  align-items: center;
  padding: 3rem 1rem;
}

/*-----------------------------------Specific page image */
.hero-img-bg {
  background-image: url("/static/images/bg1.jpg");
  max-width: 100%;
}

/*-----------------------------------Overlay */
.page-bg .overlay-main {
  position: absolute;
  inset: 0;
  background: rgba(0, 0, 0, 0.79);
}

/*-----------------------------------Content above image */
.content-wrapper {
  position: relative;
  z-index: 2;
  width: 100%;
  max-width: 700px;
  color: white;
}

/*-----------------------------------Form card */
.join-form {
  background: rgba(255, 255, 255, 0.95);
  padding: 2rem;
  border-radius: 12px;
  color: #111;
}

